Remove sonarqube issues